<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ContactFragment">

    <include layout="@layout/custom_topbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_add_number"
        android:layout_below="@id/customActionBar"
        android:layout_marginTop="@dimen/dimen_16dp" />

    <LinearLayout
        android:id="@+id/ll_add_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextLabelOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:divider="@color/colorBlack"
            android:gravity="center"
            android:hint="@string/contact_name"
            android:textColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_10dp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorWhite"
                app:fontFamily="@font/worksans_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/TextLabelOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_1dp"
            android:divider="@color/colorBlack"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:textColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_10dp"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textColor="@color/colorWhite"
                app:fontFamily="@font/worksans_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="@dimen/dimen_14dp"
            android:text="@string/add"
            app:icon="@drawable/ic_person_add"
            app:iconGravity="textStart" />
    </LinearLayout>

</RelativeLayout>